2007-06-27  Raphael Nunes da Motta,,,  <raphael@arthemis>

	* NEWS:
	* README:
	* configure.ac:

        Data updated to generate release 0.2.0

2007-06-24  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/gstsphinxsink.c: (gst_sphinx_sink_finalize),
	(gst_sphinx_sink_class_init), (gst_sphinx_sink_init),
	(gst_sphinx_sink_ad_read), (gst_sphinx_sink_calibrate_chunk),
	(gst_sphinx_sink_process_chunk), (gst_sphinx_sink_render):
	* src/gstsphinxsink.h:
	
	Pass fixed-size buffers to sphinx through GstAdapter. This
	should solve the problem with locking on calibration. Thanks
	a lot to Sander <avirulence@gmail.com>.

2007-06-21  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/gstsphinxsink.c: (gst_sphinx_sink_set_fsg):
	* src/spi-listener.c: (control_spi_listener_dump_actions_list),
	(control_spi_listener_build_actions_list):
	
	Ifdefs for DEBUG output

2007-06-21  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/spi-listener.c: (is_worth_searching),
	(control_spi_listener_build_actions_list),
	(control_spi_listener_process_event),
	(control_spi_listener_window_listener_cb),
	(control_spi_listener_showing_listener_cb),
	(control_spi_listener_stop):
	* src/spi-listener.h:
	* src/voice-control.c: (voice_control_applet_init):
	
	Speedup ally introspection drastically.

2007-06-21  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/spi-listener.c: (control_spi_listener_build_actions_list):
	
	Fixes crash if accessible name is zero (yes, it happens sometimes).

2007-06-20  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/voice-control.c: (control_stop), (on_sink_initialization),
	(on_sink_calibration), (on_sink_listening), (on_sink_ready),
	(voice_control_set_text), (setup_voice_control_widget):
	
	Added sensible tooltips.

2007-06-20  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/gstsphinxsink.c: (gst_sphinx_decoder_init):
	* src/voice-control.c: (setup_voice_control_widget):
	
	Fixes localization issues.

2007-06-20  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
