@@ -1,5 +1,5 @@
 FSG_BEGIN desktop-control
-NUM_STATES 17
+NUM_STATES 19
 START_STATE 0
 FINAL_STATE 16
 
@@ -18,12 +18,15 @@ TRANSITION 8 15 1.0 WINDOW
 TRANSITION 9 15 1.0 WINDOW
 TRANSITION 10 15 1.0 WINDOW
 TRANSITION 5 11 1.0 RUN
-TRANSITION 11 12 0.3 TERMINAL
-TRANSITION 11 13 0.3 BROWSER
-TRANSITION 11 14 0.3 MAIL
+TRANSITION 11 12 0.25 TERMINAL
+TRANSITION 11 13 0.25 BROWSER
+TRANSITION 11 14 0.25 MAIL
+TRANSITION 11 17 0.25 TEXT
+TRANSITION 17 18 1.0 EDITOR
 TRANSITION 12 16 0.0909
 TRANSITION 13 16 0.0909
 TRANSITION 14 16 0.0909
 TRANSITION 15 16 0.0909
+TRANSITION 18 16 0.0909
 TRANSITION 16 0  1.0
 FSG_END
